# AppliedML_project

./: .gitignore  README.md  api.py  main.py  pyproject.toml
data/: y_labels.csv
evaluation/: eval_baseline.py  eval_gradient_boosting.py  eval_random_forest.py  gradient_boosting_uncertainty.py
models/: baseline.py  feature_prep.py  gradient_boosting.py  random_forest.py
preprocessing/: categorical_encoding.py  class_encoding.py  clean_data.py  data_split.py  feature_engineering.py  get_data.py  text_features.py
